Blackpurl/src/objects/BP_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Community_Link__c</fullName>
        <label>Community Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_Logo_URL__c</fullName>
        <label>Company Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MapAPIKey__c</fullName>
        <label>MapAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Base_Url__c</fullName>
        <description>Use to store base url with namespace for the organisation.</description>
        <label>Org Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email_Recipient__c</fullName>
        <inlineHelpText>Semi colon separated email ids</inlineHelpText>
        <label>Support Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>isLoadStaticResource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLoadStaticResource</label>
        <type>Checkbox</type>
    </fields>
    <label>BP Configurations</label>
</CustomObject>